--- a/speakers-view/src/app/components/speakers-list/speakers-list.component.scss
+++ b/speakers-view/src/app/components/speakers-list/speakers-list.component.scss
@@ -6,3 +6,8 @@ table {
     font-size: 14px;
     width: 100%;
   }
+  .mat-mdc-row .mat-mdc-cell {
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    cursor: pointer;
+  }
