--- a/speakers-view/src/app/components/speakers-list/speakers-list.component.html
+++ b/speakers-view/src/app/components/speakers-list/speakers-list.component.html
@@ -20,7 +20,7 @@
     <!-- id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id.value}} </td>
     </ng-container>
   
     <!-- nat Column -->
@@ -32,7 +32,7 @@
     <!-- name Column -->
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.name.first}} {{element.name.last}}</td>
       </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
